welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: not found: value D
var message: String = D
                      ^BDRBuggle:6: error: not found: value R
  if (message == R) { 
                 ^BDRBuggle:10: error: not found: value L
  } else if (message == L) { 
                        ^BDRBuggle:14: error: not found: value I
  } else if (message == I) { 
                        ^BDRBuggle:19: error: not found: value A
  } else if (message == A) { 
                        ^BDRBuggle:22: error: not found: value B
  } else if (message == B) { 
                        ^BDRBuggle:26: error: not found: value C
  } else if (message == C) { 
                        ^BDRBuggle:31: error: not found: value Z
  } else if (message == Z) { 
                        ^BDRBuggle:34: error: not found: value Y
  } else if (message == Y) { 
                        ^BDRBuggle:38: error: not found: value X
  } else if (message == X) { 
                        ^